--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,52 @@
     <link rel="stylesheet" href="/web-layout-training-vite/assets/main-4cfea7bd.css">
   </head>
   <body>
-    <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>    <h1>我是contact</h1>
-    <footer class="footer">我是 footer</footer>
+    <header class="header bg-primary">
+    <nav class="container header-nav">
+        <div class="logo">
+            <h1><a href="index.html">Glasses</a></h1>
+        </div>
+        <ul class="header-nav-link">
+            <li><a href="#">系列鏡框</a></li>
+            <li><a href="#">門市據點</a></li>
+            <li><a href="#">部落格</a></li>
+            <li><a href="#">常見問題</a></li>
+        </ul>
+    </nav>
+</header>    <h1>我是contact</h1>
+    <footer class="footer bg-primary">
+    <div class="container">
+        <div class="footer-nav">
+            <div class="footer-top">
+                <div class="footer-link">
+                    <ul class="footer-link-item">
+                        <li><a href="index.html">首頁</a></li>
+                        <li><a href="#">系列鏡框</a></li>
+                        <li><a href="#">門市據點</a></li>
+                        <li><a href="#">部落格</a></li>
+                        <li><a href="#">常見問題</a></li>
+                    </ul>
+                    <ul class="footer-link-icon">
+                        <li><a href="#"><img src="" alt=""></a></li>
+                        <li><a href="#"><img src="" alt=""></a></li>
+                        <li><a href="#"><img src="" alt=""></a></li>
+                    </ul>
+                </div>
+                <ul class="footer-message">
+                    <li><a href="#"><span class="material-symbols-outlined">call</span> 0800-000-00</a></li>
+                    <li><a href="#"><span class="material-symbols-outlined">mail</span> glasses@business.co</a></li>
+                </ul>
+            </div>
+            <div class="footer-copy-right">
+                <p>Copyright &copy; 2020 Glasses.ALL rights reserved.</p>
+                <ul class="footer-copy-right">
+                    <li><a href="#">隱私權政策</a></li>
+                    <li><a href="#">服務條款</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
     
   </body>
 </html>
