--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contact</title>
+    <title>Glasses</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
-    <h1>我是contact</h1>
+
+
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
