--- a/pages/faq.html
+++ b/pages/faq.html
@@ -9,6 +9,28 @@
   <body>
     <%- include('./layout/header'); -%>
 
+    <main>
+      <section class="faq-box">
+          <div class="container">
+              <div class="faq-content">
+                  <h2 class="title-black">常見問題</h2>
+                  <h3 class="faq-content-title">我想詢問配鏡問題</h3>
+                  <ul class="faq-content-text">
+                      <li class="faq-content-text-dark">Q1.請問可否自備鏡框單配鏡片?</li>
+                      <li>A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。<br>當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</li>
+                      <li class="faq-content-text-dark">Q2.眼鏡都可以20分鐘取件嗎？</li>
+                      <li>A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。<br>當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</li>
+                      <li class="faq-content-text-dark">Q3.散光鏡片需要額外加價嗎？</li>
+                      <li>A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。<br>當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</li>
+                      <li class="faq-content-text-dark">Q4.我可以使用舊眼鏡的度數配鏡片嗎？</li>
+                      <li>A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。<br>當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</li>
+                      <li class="faq-content-text-dark">Q5.請問可以單購買鏡框嗎？</li>
+                      <li>A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。<br>當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</li>
+                  </ul>
+              </div>
+          </div>
+      </section>
+  </main>
 
     <%- include('./layout/footer'); -%>
 
