--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
-    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-679a2df6.js"></script>
-    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-33d3422c.css">
+    <title>Glasses</title>
+    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-52bd5f43.js"></script>
+    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-19d495f8.css">
   </head>
   <body>
     <header class="header bg-primary">
@@ -22,8 +22,6 @@
         </ul>
     </nav>
 </header>
-    <h1 class="index-title">我是首頁</h1>
-    <img src="/web-layout-training-vite/assets/cat-0c0689ae.jpg" style="width: 300px;" alt="cat">
 
     <footer class="footer bg-primary">
     <div class="container">
