--- a/pages/index.html
+++ b/pages/index.html
@@ -9,29 +9,36 @@
   <body>
     <%- include('./layout/header'); -%>
 
+    <div class="banner text-primary">
+      <div class="container banner-content">
+          <p>Promise-Desert 2020 早春系列</p>
+          <span>看得清，才能看得遠</span>
+          <a href="#" class="button button-buy">立即購買</a>
+      </div>
+    </div>
     <main>
-      <section class="feature text-primary bg-secondary">
+      <section class="feature">
           <div class="container">
-              <h2 class="title-red-mb-24">用專業的心，做專業的事</h2>
+              <h2 class="title title-red title-red-mb24">用專業的心，做專業的事</h2>
               <ul class="feature-content" >
                   <li class="feature-item" >
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section2-1.png?raw=true" alt="金錢圖示">
-                      <h3>單一價格</h3>
+                      <h3 class="feature-item-title">單一價格</h3>
                       <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>    
                   </li>
                   <li class="feature-item" >
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section2-2.png?raw=true" alt="時鐘圖示">
-                      <h3>20 分鐘即可取件</h3>
+                      <h3 class="feature-item-title">20 分鐘即可取件</h3>
                       <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
                   </li>
                   <li class="feature-item" >
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section2-3.png?raw=true" alt="愛心圖示">
-                      <h3>安心售後服務</h3>
+                      <h3 class="feature-item-title">安心售後服務</h3>
                       <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
                   </li>
                   <li class="feature-item" >
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-sectioin2-4.png?raw=true" alt="眼鏡圖示">
-                      <h3>關於鏡片</h3>
+                      <h3 class="feature-item-title">關於鏡片</h3>
                       <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
                   </li>
               </ul>
@@ -39,41 +46,41 @@
       </section>
       <section class="classic">
           <div class="container">
-              <h2 class="title-red-mb-48">經典系列鏡框</h2>
+              <h2 class="title title-red title-red-mb48">經典系列鏡框</h2>
               <ul class="classic-list" >
                   <li>
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section3-1.png?raw=true" alt="optical image">
-                      <h4>OPTICAL</h4>
+                      <h4 class="title-italic">OPTICAL</h4>
                   </li>
                   <li>
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section3-2.png?raw=true" alt="sunglasses image">
-                      <h4>SUNGLASSES</h4>
+                      <h4 class="title-italic">SUNGLASSES</h4>
                   </li>
                   <li>
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section3-3.png?raw=true" alt="functional image">
-                      <h4>FUNCTIONAL</h4>
+                      <h4 class="title-italic">FUNCTIONAL</h4>
                   </li>
               </ul>
           </div>
       </section>
       <section class="co-branding">
           <div class="container">
-              <h2 class="title-white-mb-48">聯名設計鏡框</h2>
+              <h2 class="title title-white title-white-mb48">聯名設計鏡框</h2>
               <ul>
                   <li>
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section4-1.png?raw=true" alt="DOUBLE A+ image">
-                      <h4>DOUBLE A+</h4>
+                      <h4 class="title-italic">DOUBLE A+</h4>
                   </li>
                   <li>
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section4-2.png?raw=true" alt="YOUTH image">
-                      <h4>YOUTH</h4>
+                      <h4 class="title-italic">YOUTH</h4>
                   </li>
               </ul>
           </div>
       </section>
       <section class="recommend">
           <div class="container">
-              <h2 class="title-red-mb-48">顧客推薦</h2>
+              <h2 class="title title-red title-red-mb48">顧客推薦</h2>
               <ul class="recommend-list">
                   <li class="recommend-item">
                       <img src="https://github.com/zitonbar/2023-week3-product/blob/main/images/home-section5-1.png?raw=true" alt="">
@@ -122,7 +129,7 @@
       <section class="contact-box bg-secondary">
           <div class="container">
               <div class="contact-content">
-                  <h2 class="title-red-mb-48">聯絡我們</h2>
+                  <h2 class="title title-red title-red-mb48">聯絡我們</h2>
                   <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
                   <form class="contact-form">
                       <label for="name">姓名</label>
