--- a/faq.html
+++ b/faq.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glasses</title>
-    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-0a41ac23.js"></script>
-    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-1d3b8d3a.css">
+    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-b750edc6.js"></script>
+    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-e99c7245.css">
   </head>
   <body>
     <header class="header bg-primary">
@@ -45,22 +45,22 @@
       </section>
   </main>
 
-    <footer class="footer bg-primary">
+    <footer class="footer">
     <div class="container">
         <div class="footer-nav">
             <div class="footer-top">
                 <div class="footer-link">
-                    <ul class="footer-link-item">
+                    <ul class="footer-item">
                         <li><a href="index.html">首頁</a></li>
                         <li><a href="#">系列鏡框</a></li>
                         <li><a href="#">門市據點</a></li>
                         <li><a href="#">部落格</a></li>
                         <li><a href="#">常見問題</a></li>
                     </ul>
-                    <ul class="footer-link-icon">
-                        <li><a href="#"><img src="" alt=""></a></li>
-                        <li><a href="#"><img src="" alt=""></a></li>
-                        <li><a href="#"><img src="" alt=""></a></li>
+                    <ul class="footer-icon">
+                        <li><a href="#"><img src="https://zitonbar.github.io/2023-week3-product/images/ic-social-fb.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://zitonbar.github.io/2023-week3-product/images/ic_social_ig.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://zitonbar.github.io/2023-week3-product/images/ic_social_line.png" alt=""></a></li>
                     </ul>
                 </div>
                 <ul class="footer-message">
@@ -68,9 +68,9 @@
                     <li><a href="#"><span class="material-symbols-outlined">mail</span> glasses@business.co</a></li>
                 </ul>
             </div>
-            <div class="footer-copy-right">
+            <div class="footer-copyright">
                 <p>Copyright &copy; 2020 Glasses.ALL rights reserved.</p>
-                <ul class="footer-copy-right">
+                <ul class="footer-copyright-link">
                     <li><a href="#">隱私權政策</a></li>
                     <li><a href="#">服務條款</a></li>
                 </ul>
